# skeleton-sprint-levelbuilder

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml
beta/: Makefile  main.cpp
beta/logicLayer/: logicLayer.cpp  logicLayer.h
experiments/: Makefile  main.cpp
experiments/include/: logicLayer.h
experiments/logicLayer/: logicLayer.cpp
experiments/win/SFML-2.4.2/doc/: sfml.chm
flash/levelbuilder/: levelbuilder.as3proj
flash/levelbuilder/src/: Main.as
flash/levelbuilder/src/skeletonsprint/: Board.as  STDBlockLibrary.as
game/Levels/: Terrible Level.txt
lib/skeleton-sprint-levelbuilder/: Cargo.toml
lib/skeleton-sprint-levelbuilder/assets/images/: trash-bin-src.txt
lib/skeleton-sprint-levelbuilder/src/: lib.rs  main.rs  renderer.rs  ui.rs
lib/skeleton-sprint-levelbuilder/src/ui/: error_modal.rs  note_modal.rs  style.rs  widgets.rs
lib/skeleton-sprint-levelbuilder/src/ui/widgets/: board.rs  tool_bar.rs
lib/win-nfd/: Cargo.toml
lib/win-nfd/src/: file_filters.rs  lib.rs  sys.rs
next/: assets.json  index.html  index.js  levelbuilder.js
next/v1/: index.html  levelbuilder.js
src/: .gitignore  all_lbl.txt  bower.json  build.bat  build.sh  clean-dist.sh  dark.txt  index.html  level.txt  main.js  package-lock.json  package.json  preload.js  rebuild.bat
src/bower_components/paper-input/: .bower.json
src/game/Custom Levels/: Stress Test.txt
src/js/: lvl.js  popupManager.js  steamworks.js
src/native/sks-neon/: README.md  package-lock.json  package.json
src/native/sks-neon/lib/: index.js
src/native/sks-neon/native/: Cargo.toml
src/native/sks-neon/native/lib/skeleton-sprint-levelbuilder/: Cargo.toml
src/native/sks-neon/native/lib/skeleton-sprint-levelbuilder/src/: lib.rs  renderer.rs  ui.rs
src/native/sks-neon/native/lib/skeleton-sprint-levelbuilder/src/ui/: widgets.rs
src/native/sks-neon/native/lib/skeleton-sprint-levelbuilder/src/ui/widgets/: board.rs  tool_bar.rs
src/native/sks-neon/native/lib/sks/: Cargo.toml  as3_level.txt  as3_lvl.txt
src/native/sks-neon/native/lib/sks/src/: as3.rs  block.rs  lib.rs
src/native/sks-neon/native/lib/sks_legacy/: Cargo.toml
src/native/sks-neon/native/lib/sks_legacy/src/: as3.rs  lib.rs  render.rs
src/native/sks-neon/native/src/: lib.rs  util.rs
src/svelte/: rollup.config.js
src/svelte/public/: bundle.js
src/svelte/src/: Button.html  ImportModal.html  Modal.html  NoteModal.html  main.js
src/test/: Test.txt
src/test_levels/: 4.txt  kitchen_sink.txt  kitchen_sink_as3.txt  test_lbl.txt
src/userModules/: export-level.html  import-level.html  level-view.html  tool-bar.html
