[package]
name = "sks-neon"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "sks_neon"
crate-type = [ "dylib" ]

[build-dependencies]
neon-build = "0.4.2"

[dependencies]
neon = { version = "0.4.2", features = [ "default-panic-hook" ] }
sks = { path = "lib/sks_legacy", package = "sks_legacy" }
skeleton-sprint-levelbuilder = { path = "lib/skeleton-sprint-levelbuilder" }

[patch.crates-io]
# Updates piston-graphics
conrod_core = { git = "https://github.com/adumbidiot/conrod", branch = "update-piston-graphics" }

# Force static-crt
spirv_cross = { git = "https://github.com/adumbidiot/spirv_cross", branch = "static-crt" }

# Updated wgpu
conrod_wgpu = { git = "https://github.com/adumbidiot/conrod", branch = "update-piston-graphics" }