[package]
name = "skeleton-sprint-levelbuilder"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
futures = "0.3.5"
human-panic = "1.0.3"
iced_core = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94" }
iced_wgpu = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94", features = [ "image" ] }
iced_native = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94" }
image = "0.23.10"
sks = { path = "C:/Users/nathaniel/Documents/Github/sks-rs" }
wgpu = "0.6.0"

[patch.crates-io]
# Static crt
spirv_cross = { git = "https://github.com/adumbidiot/spirv_cross", branch = "static-crt" }
