[package]
name = "sks_legacy"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
image = "0.23.10"
imageproc = "0.19.2"

# sks = { git = "https://github.com/adumbidiot/sks-rs", rev = "8993fb3" }
sks = { path = "C:/Users/nathaniel/Documents/Github/sks-rs" }
skeleton-sprint-levelbuilder = { path = "../../../../../../lib/skeleton-sprint-levelbuilder" }
